Adds missing brew stuff

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -5,7 +5,9 @@ tap 'homebrew/bundle'
 brew 'git'
 brew 'rbenv'
 brew 'nvm'
+brew 'yarn'
 brew 'openssh'
+brew 'openssl'
 brew 'autojump'
 brew 'bash-completion'
 brew 'lastpass-cli'
@@ -14,3 +16,6 @@ cask 'atom'
 cask 'google-chrome'
 cask 'firefox'
 cask 'screenhero'
+cask 'spectacle'
+cask 'gitify'
+cask 'gpgtools'
