--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -3,20 +3,32 @@ cask_args appdir: '/Applications'
 tap 'homebrew/bundle'
 
 brew 'git'
+brew 'git-lfs'
 brew 'rbenv'
 brew 'nvm'
 brew 'yarn'
 brew 'openssh'
-brew 'openssl'
+brew 'openssl@1.1'
 brew 'autojump'
+brew 'bash'
 brew 'bash-completion'
-brew 'lastpass-cli'
+brew 'chamber'
 brew 'vim'
+brew 'mysql'
+brew 'ruby-build'
+brew 'nvm'
+brew 'rbenv'
+brew 'docker'
 
 cask 'atom'
+cask 'visual-studio-code'
 cask 'google-chrome'
 cask 'firefox'
-cask 'screenhero'
 cask 'spectacle'
-cask 'gitify'
 cask 'gpgtools'
+cask 'aws-vault'
+cask 'keybase'
+cask 'slack'
+cask 'docker'
+cask 'sequel-pro'
+cask '1password'
